fix: ajustar listagem de episódios na tela do anime
